<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
>

<ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppColor"
>
    <TableLayout
            android:id="@+id/simple_db_table_tbl_lout_db_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="6"
                    android:gravity="center"
                    android:text="@string/txt_table_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" >
            </TextView>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <CheckBox android:id="@+id/simple_db_table_chb_select_all"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
            />

            <TextView
                    android:text="@string/clmn_id"
                    android:textStyle="bold"
                    android:typeface="serif" >
            </TextView>

            <TextView
                    android:text="@string/first_name"
                    android:textStyle="bold"
                    android:typeface="serif" >
            </TextView>

            <TextView
                    android:text="@string/last_name"
                    android:textStyle="bold"
                    android:typeface="serif" >
            </TextView>

            <TextView
                    android:text="@string/clmn_date_register"
                    android:textStyle="bold"
                    android:typeface="serif">
            </TextView>

            <TextView
                    android:text="@string/clmn_score"
                    android:textStyle="bold"
                    android:typeface="serif" >
            </TextView>

            <TextView
                    android:text="@string/clmn_rank"
                    android:textStyle="bold"
                    android:typeface="serif" >
            </TextView>
        </TableRow>


    </TableLayout>
</ScrollView>
    <LinearLayout
            android:id="@+id/simple_db_table_lnr_lout_with_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
    >
        <Button
                android:id="@+id/simple_db_table_btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/delete"
        />

        <Button
                android:id="@+id/simple_db_table_btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/edit"
        />

        <Space android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="0.5"
        />

        <Button
                android:id="@+id/simple_db_table_btn_start_fight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_margin="5dp"
                android:text="@string/start_fight"
        />

    </LinearLayout>
</RelativeLayout>