<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        tools:context=".MainActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Header">
         <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                style="@style/Header"
         />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <ImageButton
                android:id="@+id/main_menu_imgbtn_avatar"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/img_avatar_sample"
                android:scaleType="centerInside"
                android:background="@color/colorWhite"
        />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/main_menu_imgbtn_avatar"
                android:layout_toStartOf="@+id/main_menu_imgbtn_totemon"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:background="@color/colorWhite"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_name_person_sample"
                    style="@style/BigText"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/txt_guild_sample"
                    style="@style/MainText"
                    android:textColor="@color/colorSecondaryLight"
            />
        </LinearLayout>

        <ImageButton
                android:id="@+id/main_menu_imgbtn_totemon"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/img_totemon_sample"
                android:scaleType="centerInside"
                android:background="@color/colorWhite"
        />

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="20dp"
                android:text="тут будет бар опыта"
                android:textSize="22sp"
                android:textColor="@color/colorBlack"
                android:textAllCaps="true"
                android:textStyle="bold"
        />
    </LinearLayout>

    <View style="@style/SeparatingLine"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >

        <LinearLayout
                android:id="@+id/main_menu_btnlout_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:orientation="horizontal"
        >
            <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
            />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_profile"
                        style="@style/BigText"
                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_profile_description"
                        style="@style/MainText"
                />

            </LinearLayout>

        </LinearLayout>

            <View style="@style/SeparatingLine"/>

            <LinearLayout
                    android:id="@+id/main_menu_btnlout_friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
            >
                <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:src="@drawable/img_friends"
                        android:scaleType="centerInside"
                        android:padding="10dp"
                />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_friends"
                            style="@style/BigText"
                    />
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_friends_description"
                            style="@style/MainText"
                    />

                </LinearLayout>

            </LinearLayout>

            <View style="@style/SeparatingLine"/>

            <LinearLayout
                    android:id="@+id/main_menu_btnlout_meeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
            >
                <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:src="@drawable/img_meeting"
                        android:scaleType="centerInside"
                        android:padding="10dp"
                />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_meeting"
                            style="@style/BigText"
                    />
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_meeting_description"
                            style="@style/MainText"
                    />

                </LinearLayout>

            </LinearLayout>

            <View style="@style/SeparatingLine"/>

            <LinearLayout
                    android:id="@+id/main_menu_btnlout_fight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
            >
                <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:src="@drawable/img_fight"
                        android:scaleType="centerInside"
                        android:padding="10dp"
                />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_fight"
                            style="@style/BigText"
                    />
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_fight_description"
                            style="@style/MainText"
                    />

                </LinearLayout>

            </LinearLayout>

            <View style="@style/SeparatingLine"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>