<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FightActivity"
        android:orientation="vertical"
        style="@style/AppColor">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#C8D7DD">

        <ImageButton
                android:id="@+id/fight_imgbtn_warning_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_toStartOf="@+id/fight_txt_warning"
                android:background="@color/colorThirdDark"
                android:src="@drawable/img_warning_third_color"
                android:scaleType="centerInside"/>

        <TextView
                android:id="@+id/fight_txt_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/txt_warning"
                style="@style/BigText"/>

        <ImageButton
                android:id="@+id/fight_imgbtn_warning_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_toEndOf="@id/fight_txt_warning"
                android:background="@color/colorSecondaryDark"
                android:src="@drawable/img_warning_sec_color"
                android:scaleType="centerInside" />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
        <TextView
                android:id="@+id/fight_txt_name_first"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/fight_sepline_fighters"
                android:gravity="center"
                android:text="Первый боец"
                android:background="@color/colorThirdLight"
                style="@style/BigText.Bold"/>

        <View
                android:id="@+id/fight_sepline_fighters"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                style="@style/SeparatingLine" />

        <TextView
                android:id="@+id/fight_txt_name_second"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/fight_sepline_fighters"
                android:gravity="center"
                android:text="Второй боец"
                android:background="@color/colorSecondaryLight"
                style="@style/BigText.Bold"/>
    </RelativeLayout>

    <TextView
            android:id="@+id/fight_txt_summary_score"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|top"
            android:text="@string/fight_txt_summary_score"
            style="@style/BigText.Bold"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/fight_rltvlout_score_separator"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:text="9"
                android:textSize="@android:dimen/notification_large_icon_width"
                android:textColor="@color/colorBlack"
                android:background="@color/colorThird"/>

        <RelativeLayout
                android:id="@+id/fight_rltvlout_score_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
            <TextView
                    android:id="@+id/fight_txt_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/fight_txt_left"
                    style="@style/BigText"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fight_txt_left"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/img_colon"/>
        </RelativeLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/fight_rltvlout_score_separator"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:text="9"
                android:textSize="@android:dimen/notification_large_icon_width"
                android:textColor="@color/colorWhite"
                android:background="@color/colorSecondary"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <ImageButton
                android:id="@+id/fight_imgbtn_button_3_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/fight_lnrlout_button_3"
                android:background="@android:color/transparent"/>

        <LinearLayout
                android:id="@+id/fight_lnrlout_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/fight_txt_name_button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Название 3-х очков"
                    android:layout_gravity="center"
                    style="@style/BigText"/>

            <TextView
                    android:id="@+id/fight_txt_description_button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Описание 3-х очков"
                    style="@style/MainText"/>
        </LinearLayout>

        <ImageButton
                android:id="@+id/fight_imgbtn_button_3_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/fight_lnrlout_button_3"
                android:background="@android:color/transparent"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <ImageButton
                android:id="@+id/fight_imgbtn_button_2_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/fight_lnrlout_button_2"
                android:background="@android:color/transparent"/>

        <LinearLayout
                android:id="@+id/fight_lnrlout_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/fight_txt_name_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Название 2-х очков"
                    android:layout_gravity="center"
                    style="@style/BigText"/>

            <TextView
                    android:id="@+id/fight_txt_description_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Описание 2-х очков"
                    style="@style/MainText"/>
        </LinearLayout>

        <ImageButton
                android:id="@+id/fight_imgbtn_button_2_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/fight_lnrlout_button_2"
                android:background="@android:color/transparent"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <ImageButton
                android:id="@+id/fight_imgbtn_button_1_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/fight_lnrlout_button_1"
                android:background="@android:color/transparent"/>

        <LinearLayout
                android:id="@+id/fight_lnrlout_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/fight_txt_name_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Название 1-го очка"
                    android:layout_gravity="center"
                    style="@style/BigText"/>

            <TextView
                    android:id="@+id/fight_txt_description_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Описание 1-го очка"
                    style="@style/MainText"/>
        </LinearLayout>

        <ImageButton
                android:id="@+id/fight_imgbtn_button_1_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/fight_lnrlout_button_1"
                android:background="@android:color/transparent"/>
    </RelativeLayout>
</LinearLayout>